--- a/composer.json
+++ b/composer.json
@@ -10,11 +10,14 @@
         }
     ],
     "require": {
-        "php": ">=5.6",
-        "guzzlehttp/guzzle": "6.*",
-        "monolog/monolog": "1.*",
-        "tedivm/stash": "^0.14.2",
-        "illuminate/support": "~5.1"
+        "php": "^7.2.5",
+        "ext-json" : "*",
+        "guzzlehttp/guzzle": "^6.3",
+        "monolog/monolog": "2.*",
+        "tedivm/stash": "^0.15.2",
+        "illuminate/support": "^7.0",
+        "symfony/var-dumper": "^5.0",
+        "illuminate/container": "^7.4"
     },
     "autoload": {
         "psr-4": {
@@ -23,5 +26,12 @@
         "files": [
             "src/helpers.php"
         ]
+    },
+    "extra": {
+        "laravel": {
+            "providers": [
+                "Requester\\RequestServiceProvider"
+            ]
+        }
     }
 }
